[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/asteroids.png" type="Texture" id=1]
[ext_resource path="res://site.gd" type="Script" id=2]
[ext_resource path="res://XenoSite.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 26.2578

[node name="site" type="Position2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="XenoSite" type="Node" parent="."]
script = ExtResource( 3 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
